tests/baselines/reference/superCallFromClassThatDerivesFromGenericTypeButWithNoTypeArguments1(strict=true).errors.txt
superCallFromClassThatDerivesFromGenericTypeButWithNoTypeArguments1.ts(7,17): error TS2314: Generic type 'A<T1, T2>' requires 2 type argument(s).
superCallFromClassThatDerivesFromGenericTypeButWithNoTypeArguments1.ts(8,27): error TS7006: Parameter 'value' implicitly has an 'any' type.


==== superCallFromClassThatDerivesFromGenericTypeButWithNoTypeArguments1.ts (2 errors) ====
    class A<T1, T2> {
        constructor(private map: (value: T1) => T2) {
    
        }
    }
    
    class B extends A {
                    ~
!!! error TS2314: Generic type 'A<T1, T2>' requires 2 type argument(s).
        constructor() { super(value => String(value)); }
                              ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
    }